--- a/internshala_INSAID_Sample_Skeleton.ipynb
+++ b/internshala_INSAID_Sample_Skeleton.ipynb
@@ -114,7 +114,7 @@
         "df = pd.read_csv('https://bit.ly/2Qq259J')\n",
         "df.head()"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -328,7 +328,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -466,7 +466,7 @@
       "source": [
         "html = ProfileReport(df)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,7 +537,7 @@
       "source": [
         "df.isnull().sum().sort_values(ascending = False)[:3]"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,7 +591,7 @@
         "categorical_data = df.select_dtypes(include = 'object')\n",
         "categorical_data.head(2)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -711,7 +711,7 @@
       "source": [
         "categorical_data.columns"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -747,7 +747,7 @@
         "#type of TotalCharges column values\n",
         "type(categorical_data.TotalCharges.values[0])"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -806,7 +806,7 @@
       "source": [
         "indexes"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -837,7 +837,7 @@
         "#values\n",
         "df.loc[indexes].TotalCharges.values"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -899,7 +899,7 @@
       "source": [
         "df.head(2)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1029,7 +1029,7 @@
         "#now check the type of TotalCharges column values\n",
         "type(df.TotalCharges.values[0])"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1059,7 +1059,7 @@
       "source": [
         "df.isnull().sum().sort_values(ascending = False)[:3]"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1092,7 +1092,7 @@
       "source": [
         "plt.scatter(x = df.MonthlyCharges, y = df.TotalCharges)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1123,7 +1123,7 @@
         "numeric_data = df.select_dtypes(exclude = 'object')\n",
         "numeric_data.head(2)"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1237,7 +1237,7 @@
         "categorical_columns = df.select_dtypes(include = 'object') #select categorical columns\n",
         "categorical_columns.head(1)"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1331,7 +1331,7 @@
       "source": [
         "categorical_columns.shape"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1383,7 +1383,7 @@
       "source": [
         "!git clone https://github.com/noushadkhan01/my_methods.git"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1424,7 +1424,7 @@
       "source": [
         "%cd my_methods"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1449,7 +1449,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1546,7 +1546,7 @@
         "ohe = MyDummyVariable() #create instance of MYDummyVariable class\n",
         "print(ohe)"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1573,7 +1573,7 @@
         "data = ohe.fit_transform(df) #fit_transofrm dataframe\n",
         "data.head(2)"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1756,7 +1756,7 @@
       "source": [
         "X.head(1)"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1901,7 +1901,7 @@
       "source": [
         "X.isnull().any().sum() #check if the features have any null values"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1953,7 +1953,7 @@
         "validate_index = np.random.randint(0, len(X), size = (30))\n",
         "validate_index[:3]"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1984,7 +1984,7 @@
         "X_validation = X.loc[validate_index]\n",
         "X_validation.head(2)"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2141,7 +2141,7 @@
         "y_validation = y.loc[validate_index]\n",
         "y_validation[:10]"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2209,7 +2209,7 @@
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = .2, random_state = 0)\n",
         "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2250,7 +2250,7 @@
         "#numeric columns in our dataset\n",
         "df.select_dtypes(exclude = 'object').columns"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2280,7 +2280,7 @@
       "source": [
         "sns.boxplot(df.MonthlyCharges, orient = 'vertical')"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2322,7 +2322,7 @@
       "source": [
         "sns.boxplot(df.TotalCharges, orient = 'vertical')"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2364,7 +2364,7 @@
       "source": [
         "sns.boxplot(df.tenure, orient = 'vertical')"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2407,7 +2407,7 @@
         "#check frequency of each class in our dataset\n",
         "sns.countplot(y)"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2470,7 +2470,7 @@
       "source": [
         "!ls "
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2562,7 +2562,7 @@
       "source": [
         "choose_best_classifier(X, y)"
       ],
-      "execution_count": 53,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2619,7 +2619,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 54,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2716,7 +2716,7 @@
         "#print model results\n",
         "print_model_results(X_train, X_test, y_train, y_test, model)"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2783,7 +2783,7 @@
       "source": [
         "my_global_variables.my_models"
       ],
-      "execution_count": 60,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2865,7 +2865,7 @@
         "X_sm, y_sm = sm.fit_sample(X, y)\n",
         "X_sm.shape, y_sm.shape"
       ],
-      "execution_count": 63,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2896,7 +2896,7 @@
         "#check best classifier for balanced dataset\n",
         "choose_best_classifier(X_sm, y_sm)"
       ],
-      "execution_count": 64,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3004,7 +3004,7 @@
       "source": [
         "X_train_sm.shape, y_train_sm.shape"
       ],
-      "execution_count": 68,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3035,7 +3035,7 @@
         "X_test_sm, y_test_sm = sm2.fit_resample(X_test, y_test)\n",
         "X_test_sm.shape, y_test_sm.shape"
       ],
-      "execution_count": 69,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3066,7 +3066,7 @@
         "rf = RandomForestClassifier()\n",
         "print_model_results(X_train_sm, X_test_sm, y_train_sm, y_test_sm, model = rf)"
       ],
-      "execution_count": 70,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3159,7 +3159,7 @@
       "source": [
         "confusion_matrix(y_validation, rf.predict(X_validation))"
       ],
-      "execution_count": 72,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3247,7 +3247,7 @@
         "plt.xticks(ticks = range(2, 100), rotation = 45)\n",
         "plt.show()"
       ],
-      "execution_count": 75,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3280,7 +3280,7 @@
         "fmodel = RandomForestClassifier(n_estimators = 30, min_samples_split = 87)\n",
         "print_model_results(X_train_sm, X_test_sm, y_train_sm, y_test_sm, fmodel)"
       ],
-      "execution_count": 76,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3386,7 +3386,7 @@
       "source": [
         "print_model_results(X_train_sm, X_test_sm, y_train_sm, y_test_sm, xgb)"
       ],
-      "execution_count": 130,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3446,16 +3446,16 @@
       "metadata": {
         "id": "dCOF-fBPrhCM",
         "colab_type": "code",
+        "outputId": "f106eee0-d176-4c8f-c726-ca5b1cf3bd1c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "f106eee0-d176-4c8f-c726-ca5b1cf3bd1c"
+        }
       },
       "source": [
         "confusion_matrix(y_validation, xgb.predict(X_validation.values))"
       ],
-      "execution_count": 131,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3496,7 +3496,7 @@
       "source": [
         "X_sm.shape, X_validation.shape"
       ],
-      "execution_count": 80,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3527,7 +3527,7 @@
         "xgb = XGBClassifier(random_state=2, learning_rate=.04)\n",
         "print_model_results(X_sm, X_validation.values, y_sm, y_validation, xgb)"
       ],
-      "execution_count": 115,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3642,7 +3642,7 @@
       "source": [
         "model.fit(X_train_sm, y_train_sm)"
       ],
-      "execution_count": 142,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3678,7 +3678,7 @@
       "source": [
         "my_roc_curve(model, X_test_sm, y_test_sm, )"
       ],
-      "execution_count": 143,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3736,7 +3736,7 @@
       "source": [
         "evaluate_threshold(.5)"
       ],
-      "execution_count": 147,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3785,7 +3785,7 @@
       "source": [
         "my_cap_curve(model, X_test_sm, y_test_sm, )"
       ],
-      "execution_count": 149,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3806,17 +3806,17 @@
       "metadata": {
         "id": "44WnUvEnn0ff",
         "colab_type": "code",
+        "outputId": "35a76a3d-0e61-4cf4-925d-b6f6aadfe795",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        },
-        "outputId": "35a76a3d-0e61-4cf4-925d-b6f6aadfe795"
+        }
       },
       "source": [
         "feature_importance = pd.DataFrame(np.array([X.columns, model.feature_importances_]).T, columns = ['feature_name', 'importance'])\n",
         "feature_importance.head(1)"
       ],
-      "execution_count": 150,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3871,17 +3871,17 @@
       "metadata": {
         "id": "_v_swWIVpdop",
         "colab_type": "code",
+        "outputId": "79493f79-856f-4dc2-d7f3-e3e9d054f9be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 111
-        },
-        "outputId": "79493f79-856f-4dc2-d7f3-e3e9d054f9be"
+        }
       },
       "source": [
         "feature_importance.sort_values(by = 'importance', ascending=False, inplace = True)\n",
         "feature_importance.head(2)"
       ],
-      "execution_count": 151,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3942,18 +3942,18 @@
       "metadata": {
         "id": "fShgBCbkpMIW",
         "colab_type": "code",
+        "outputId": "062676d0-909b-4148-bb12-baacce779151",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 453
-        },
-        "outputId": "062676d0-909b-4148-bb12-baacce779151"
+        }
       },
       "source": [
         "sns.barplot(x = 'feature_name', y = 'importance', data = feature_importance)\n",
         "plt.xticks(rotation = -90)\n",
         "plt.show()"
       ],
-      "execution_count": 152,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4000,7 +4000,7 @@
         "**PaymentMethod**\n",
         "\n",
         "\n",
-        "when Paymentmethod is **Electronic Check** there are hight chances that the customer discontinue the subscription"
+        "when Paymentmethod is **Electronic Check** there are higher chances that the customer **continue** the subscription"
       ]
     },
     {
@@ -4013,7 +4013,7 @@
         "**Contract**\n",
         "\n",
         "\n",
-        "When contract is for **One Year** then there are hight chances that the customer discontinue the subscription"
+        "When contract is for **One Year** then there are higher chances that the customer **continue** the subscription"
       ]
     },
     {
